# nGITool

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  estimators.md  fileindexing.md  index.md  method.md  overview.md  pixi.toml
applications/ngitool/: CMakeLists.txt  copy_dylibs.sh
applications/ngitool/QtnGITool/: QtnGITool.pro  main.cpp  ngimainwindow.cpp  ngimainwindow.h  ngireport.h
applications/ngitool/Resources/: ngi_icon.icns
applications/ngitool/doc/figures/icon/: interference_pattern.py
applications/ngitool/nGITool/: nGITool.pro  ngimainwindow.cpp  ngimainwindow.ui
applications/ngitool/scripts/: qtngitool
applications/ngitool/src/: main.cpp  ngi_icon.rc  ngimainwindow.cpp  ngimainwindow.ui  ngireport.cpp
deploy/mac/: deploy_nGItool_mac.sh
deploy/win/: deploynGITool_win.bat
frameworks/: nGIFrameworkBundle.pro
frameworks/ngi/nGIEstimators/: .cproject  .project  CMakeLists.txt
frameworks/ngi/nGIEstimators/include/: nGIBLUEEstimator.h  nGIEstimators.h  nGILSEstimator.h  nGIPenalizedMLEstimator.h  nGIStandardEstimator.h  ngiestimators_global.h  stdafx.h
frameworks/ngi/nGIEstimators/qt/: nGIEstimators.pro
frameworks/ngi/nGIEstimators/src/: dllmain.cpp  nGIBLUEEstimator.cpp  nGIEstimators.cpp  nGILSEstimator.cpp  nGIPenalizedMLEstimator.cpp  nGIStandardEstimator.cpp  stdafx.cpp  stdafx.h
frameworks/ngi/nGIFramework/: .cproject  .project  CMakeLists.txt
frameworks/ngi/nGIFramework/include/: EstimatorBase.h  InteractionBase.h  ModuleItem.h  PreprocModuleBase.h  ProjectionReader.h  nGIConfig.h  nGIEngine.h  nGIException.h  nGIFactory.h  nGIFramework_global.h  nGIProcessor.h  stdafx.h
frameworks/ngi/nGIFramework/qt/: nGIFramework.pro
frameworks/ngi/nGIFramework/src/: EstimatorBase.cpp  InteractionBase.cpp  ModuleItem.cpp  PreprocModuleBase.cpp  ProjectionReader.cpp  nGIConfig.cpp  nGIEngine.cpp  nGIException.cpp  nGIFactory.cpp  nGIProcessor.cpp  ngigenerator.cpp  stdafx.h
frameworks/ngi/nGIPreprocessing/: .cproject  .project  CMakeLists.txt
frameworks/ngi/nGIPreprocessing/include/: nGIISSfilter.h  nGILogNorm.h  nGIPreprocessing.h  nGISpotClean.h  ngipreprocessing_global.h  stdafx.h
frameworks/ngi/nGIPreprocessing/qt/: nGIPreprocessing.pro
frameworks/ngi/nGIPreprocessing/src/: nGIISSfilter.cpp  nGILogNorm.cpp  nGIPreprocessing.cpp  nGISpotClean.cpp  stdafx.h
gui/gngitool/devstudio/vs2008/ngi_tool/ngi_installer/: ngi_installer.vdproj
gui/gngitool/devstudio/vs2008/ngi_tool/ngi_tool/: ngi_tool.vcproj
gui/gngitool/devstudio/vs2010/ngitool/nGIPreprocessingGUI/: nGIPreprocessingGUI.vcxproj
gui/gngitool/devstudio/vs2010/ngitool/nGITool_setup/: nGITool_setup.vdproj
gui/gngitool/include/: nGIReportGenerator.h
gui/gngitool/src/: dpc.cpp  nGIReportGenerator.cpp
gui/qngitool/: copy_dlls.bat  copy_dylibs.sh  deployngitool_mac.sh  deployngitool_ubuntu.sh  package.sh
gui/qngitool/QtnGITool/: QtnGITool.pro  main.cpp  ngimainwindow.cpp  ngimainwindow.h  ngimainwindow.ui  ngireport.cpp  ngireport.h
ngi/core/nGIEstimators/include/: nGIBLUEEstimator.h
ngi/core/nGIEstimators/qt/: nGIEstimators.pro
ngi/core/nGIEstimators/src/: nGIBLUEEstimator.cpp
ngi/core/nGIFramework/include/: InteractionBase.h  nGIEngine.h  nGIFramework_global.h  ngigenerator.h
ngi/core/nGIFramework/src/: ngigenerator.cpp
ngi/core/nGIPreprocessing/include/: nGILogNorm.h
ngi/gui/gngitool/devstudio/vs2008/ngi_tool/: ngi_tool.sln
ngi/gui/gngitool/devstudio/vs2010/ngitool/: ngitool.sln
ngi/gui/gngitool/devstudio/vs2010/ngitool/nGIEstimators/: nGIEstimators.vcxproj  nGIEstimators.vcxproj.filters
ngi/gui/gngitool/devstudio/vs2010/ngitool/nGIFramework/: nGIFramework.vcxproj  nGIFramework.vcxproj.filters
ngi/gui/gngitool/devstudio/vs2010/ngitool/nGIPreprocessing/: nGIPreprocessing.vcxproj  nGIPreprocessing.vcxproj.filters
ngi/gui/gngitool/devstudio/vs2010/ngitool/nGIPreprocessingGUI/: nGIPreprocessingGUI.vcxproj.filters
ngi/gui/gngitool/devstudio/vs2010/ngitool/ngitool/: ngitool.vcxproj  ngitool.vcxproj.filters
ngi/gui/gngitool/include/: ArrayBuffer.h  DpcGUI.h  PreProcModuleConfigurator.h
ngi/gui/gngitool/install/: install.sh  package.sh  set_environment.sh
ngi/gui/gngitool/resources/: defaults_linux.xml  defaults_windows.xml  dpc.glade  dpc_gtk24.glade  ngi.glade
ngi/gui/gngitool/src/: DpcGUI.cpp  PreProcModuleConfigurator.cpp  stdafx.h
ngi/gui/qngitool/: deployngitool_mac.sh  package_mac.sh
ngi/gui/qngitool/QtnGITool/: main.cpp  ngimainwindow.ui
ngi/ralph/lynch_theory_gui/: backend.txt  plotting.py  plotting_v02.py  testui.py  untitled.ui  v01.py  v02.py  v03.py
proposal/: GoldenSectionResults.tex  SNF_nCT_Kaestner.tex  tomosynthesis.bib
proposal/figures/: tree.dot
ralph/: test.py  v01.ui
ralph/lynch_theory_gui/: plotting.py  v01.py  v01.ui  v02.py
roots/proposal/: RootImaging_Kaestner_Carminati_0001.doc  TopicalBrainstormingNI_roots.mm  literature_search.bib  literature_search.tex  spatiotemporalCT.tex
roots/src/RootTracker2D/: copy_dlls.bat  deployroottracker_mac.sh  deployroottracker_ubuntu.sh
roots/src/RootTracker2D/RootTracker2D/: RootTrackConfig.h  RootTracker2D.pro  RootTracker2D_global.h  main.cpp  mainwindow.cpp  mainwindow.h  rootfinder.cpp  rootfinder.h
src/RootTracker2D/: deployroottracker_mac.sh  package.sh
src/RootTracker2D/RootTracker2D/: RootTrackConfig.cpp  RootTrackConfig.h  RootTracker2D.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  rootfinder.cpp
src/RootTracker2D/matlab/: root_tests.m
src/RootTracker2D/scripts/: roottracker
